--- a/moinbooking/index.html
+++ b/moinbooking/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" ng-app>
 <head>
+  <title>MoinBooking</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -49,53 +50,53 @@ h2 {
   <div class="container" style="background-color: rgba(0, 0, 0, 0.5);">
     <div class="row">
       <span ng-class="{'col-xs-6': true, 'btn-tab':towleg, 'btn-tab-selected':!towleg}">
-        <button class="btn btn-link btn-block" ng-click="towleg = false">ONE WAY</button>
+        <button id="oneway-tab" class="btn btn-link btn-block" ng-click="towleg = false">ONE WAY</button>
       </span>
       <span ng-class="{'col-xs-6': true, 'btn-tab':!towleg, 'btn-tab-selected':towleg}">
-        <button class="btn btn-link btn-block" ng-click="towleg = true">HOURLY</button>
+        <button id="hourly-tab" class="btn btn-link btn-block" ng-click="towleg = true">HOURLY</button>
       </span>
     </div>
     <!-- <form name="booking_request_form" id="new_booking_request" action="https://www.blacklane.com/en/booking_requests/transfers/new" accept-charset="UTF-8" method="get"> -->
     <form name="booking_request_form" id="new_booking_request" accept-charset="UTF-8" method="get">
       <input name="utf8" type="hidden" value="✓">
       <div class="form-group">
-        <fieldset id="first-leg" >
+        <fieldset id="first-leg">
           <div class="form-group">
             <div class="col-sm-6">
-              <input class="form-control" placeholder="From: address, airport, hotel, ..." type="text" name="booking_request[pickup]">
+              <input class="form-control" ng-model="pickup" placeholder="From: address, airport, hotel, ..." type="text" name="booking_request[pickup]" required>
             </div>
             <div class="col-sm-6">
-              <input class="form-control" placeholder="To: address, airport, hotel, ..." type="text" name="booking_request[dropoff]">
+              <input class="form-control" ng-model="dropoff" placeholder="To: address, airport, hotel, ..." type="text" name="booking_request[dropoff]">
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-sm-6">
-              <input class="form-control" type="date" name="booking_request[at_date]">
+              <input class="form-control" ng-model="at_date" type="date" name="booking_request[at_date]">
             </div>
             <div class="col-sm-6">
-              <input class="form-control" type="time" name="booking_request[at_time]">
+              <input class="form-control" ng-model="at_time" type="time" name="booking_request[at_time]">
             </div>
           </div>
         </fieldset>
 
-        <fieldset ng-if="towleg">
+        <fieldset ng-if="towleg" id="second-leg">
           <!-- Please mind that submitting the following fields (anything related to a return ride) to the booking funnel won't have any effect - e.g.: it just won't work yet, feel free to focus on something else :)-->
           <div class="form-group">
             <div class="col-sm-6">
-              <input class="form-control" placeholder="From: address, airport, hotel, ..." type="text" name="booking_request[return_pickup]">
+              <input class="form-control" ng-model="return_pickup" placeholder="From: address, airport, hotel, ..." type="text" name="booking_request[return_pickup]" required>
             </div>
             <div class="col-sm-6">
-              <input class="form-control" placeholder="To: address, airport, hotel, ..." type="text" name="booking_request[return_dropoff]">
+              <input class="form-control" ng-model="return_dropoff" placeholder="To: address, airport, hotel, ..." type="text" name="booking_request[return_dropoff]" required>
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-sm-6">
-              <input class="form-control" type="date" name="booking_request[return_at_date]">
+              <input class="form-control" ng-model="return_at_date" type="date" name="booking_request[return_at_date]" required>
             </div>
             <div class="col-sm-6">
-              <input class="form-control" type="time" name="booking_request[return_at_time]">
+              <input class="form-control" ng-model="return_at_time" type="time" name="booking_request[return_at_time]" required>
             </div>
           </div>
         </fieldset>
